<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btnConnect">
        
        <!--  Self information -->
	    <TextView
	        android:id="@+id/tvSelfName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    <TextView
	        android:id="@+id/tvSelfStatus"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:gravity="center_vertical"
	        android:background="@android:color/holo_blue_bright"/>
	    
	    <!--  Peers List -->
	    <ListView
	        android:id="@id/android:list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    <TextView
	        android:id="@id/android:empty"
	        android:layout_height="match_parent"
	        android:layout_width="match_parent"
	        android:text="@string/empty_device_list"
	        android:gravity="center"/>
    </LinearLayout>
    
    <Button
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:id="@+id/btnDisconnect"
       android:layout_alignParentLeft="true"
       android:layout_alignParentBottom="true"
       android:text="@string/device_list_disconnect"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@id/btnConnect"
       android:layout_alignParentRight="true"
       android:layout_alignParentBottom="true" 
       android:text="@string/device_list_connect"/>
</RelativeLayout>